# webenc

./: CHANGELOG.md  PLAN.md  README.md  pyproject.toml
src/webenc/: __init__.py  bom.py  codecs.py  compat.py  labels.py
tests/: test_bom.py  test_codecs.py  test_compat.py  test_init.py  test_labels.py
