[project]
name = "webenc"
version = "0.1.0"
description = "WHATWG Encoding Standard implementation for Python — drop-in replacement for webencodings"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Agentine" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/agentine/webenc"
Repository = "https://github.com/agentine/webenc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webenc"]

[dependency-groups]
dev = [
    "mypy>=1.19",
    "pytest>=9.0.3",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
